--- a/fulcrum/preservation.html
+++ b/fulcrum/preservation.html
@@ -76,7 +76,7 @@ Library's digital materials.</p>
 
 <p>U-M Library's institutional stance is strongly predisposed to migration
 strategies, which we enable via policies that restrict file formats at the point
-of ingest. Our <a href="https://deepblue.lib.umich.edu/static/about/deepbluepreservation.html">file
+of ingest. Our <a href="https://lib.umich.edu/about-us/policies/digital-repository-services-digital-preservation-policy/registered-formats-and">file
 format guidelines</a> are based on the recommendations of the Library of
 Congress and reflect the accepted best practices of the digital preservation
 community. Fulcrum's file format recommendations may place further restrictions
